# FractalCL

./: .clang-format  .travis.yml  CMakeLists.txt  Makefile  README-0.0.1.md  README.md  build-kanapi.sh  build.sh  configure  format-files.sh  fractal.c  fractal_ocl.c  fractals.md  gui.c  julia.cl  mandelbrot.cl  ocl.c  palette.c  parameters.c  timer.c
docker/: Dockerfile-arch  Dockerfile-fedora-27  Dockerfile-fedora-28  Dockerfile-fedora-29  Dockerfile-fedora-30  Dockerfile-fedora-31  Dockerfile-ubuntu-16.04  Dockerfile-ubuntu-18.04  build-arch.sh  build-fedora-27.sh  build-fedora-28.sh  build-fedora-29.sh  build-fedora-30.sh  build-fedora-31.sh  build-ubuntu-16.4.sh  build-ubuntu-18.4.sh
include/: common.h  fractal.h  fractal_complex.h  fractal_ocl.h  gui.h  palette.h  parameters.h  timer.h  window.h
kernels/: burning_ship.cl  common.cl  dragon.cl  fractal_types.h  generalized_celtic.cl  julia.cl  julia3.cl  julia4.cl  julia_full.cl  mandelbrot.cl  perf_kernel.cl  test_kernel.cl  tricorn.cl
results/: Readme.md
tests/: Makefile  burning_ship.cl  double.c  dragon.cl  generalized_celtic.cl  julia.cl  julia3.cl  julia_full.cl  mandelbrot.cl  search_fractal.c  test_complex.c  test_fractal.c  test_fractal.py  test_fractal_gmp.c  test_fractal_mpfr.c  test_gtk.c  test_inter.c  test_iter.c  test_kernel.cl  test_mpfr.c  test_ocl.c  test_perf.c  test_plasma.c  test_sdl.c  test_sdl_render.c
tests/neurons/: Makefile  test_equations.c  test_linear.c  test_neurons.c  test_non_linear.c
